[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/Villager.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/Heal.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/Purge.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/GameArea.gd" type="Script" id=4]
[ext_resource path="res://scene/Rat.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/Background.tscn" type="PackedScene" id=7]

[node name="GameArea" type="Control"]
rect_min_size = Vector2( 1280, 660 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
Rat = ExtResource( 5 )
Villager = ExtResource( 1 )
Heal = ExtResource( 2 )
Purge = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 7 )]
margin_top = 0.0394983
margin_bottom = 720.04

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 73.8923, 466.348 )

[node name="RatTimer" type="Timer" parent="."]
autostart = true

[node name="VillagerTimer" type="Timer" parent="."]
autostart = true
[connection signal="die" from="Player" to="." method="_on_Player_die"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="timeout" from="RatTimer" to="." method="_on_RatTimer_timeout"]
[connection signal="timeout" from="VillagerTimer" to="." method="_on_VillagerTimer_timeout"]
